--- a/src/components/css/portalComponents/ManageUsers.css
+++ b/src/components/css/portalComponents/ManageUsers.css
@@ -12,11 +12,12 @@
 .manage-users-page {
     display: flex;
     margin-top: 10px;
+    margin-bottom: 10px;
     margin-left: 10px;
     margin-right: 10px;
     align-items: center;
     flex-direction: column;
-    transition: all 0.2s ease-in-out;
+    animation: fadeIn 0.2s;
     width: 100%;
     height: calc(100vh - 100px)
 }
@@ -48,7 +49,7 @@
 } 
 
 .manage-users-container-header {
-    background-color: #303030;
+    background-color: #222222;
     width: 100%;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
@@ -60,7 +61,7 @@
     font-size: 20px;
     text-align: center;
 } .manage-users-container-header-notice {
-    background-color: #303030;
+    background-color: #222222;
     border-left: 1px solid #706f6f;
     border-right: 1px solid #706f6f;
     border-bottom: 1px solid #706f6f;
