--- a/src/components/css/portalComponents/RobloxSystem/ManageBansRow.css
+++ b/src/components/css/portalComponents/RobloxSystem/ManageBansRow.css
@@ -2,16 +2,15 @@
     display: flex;
     width: 100%;
     box-sizing: border-box;
-    padding: 10px 15px 10px 15px;
+    padding: 10px 0px 10px 0px;
     flex-direction: row;
-    gap: 10px;
     border-bottom: 1px solid #706f6f;
 } .manage-roblox-bans-container-row:last-of-type {
     border-bottom: none;
 }
 
 .row-grouping {
-    min-width: 25%;
+    min-width: calc(100%/4);
     display: flex;
     align-items: center;
     justify-content: center;
