--- a/src/components/css/popups/CreateRobloxBan.css
+++ b/src/components/css/popups/CreateRobloxBan.css
@@ -1,4 +1,4 @@
-.apply-modify-user-popup-container {
+.create-roblox-ban-popup-container {
     display: flex;
     flex-direction: column;
     width: 550px;
@@ -6,7 +6,7 @@
     border: 1px solid #706f6f;
     border-radius: 5px;
     animation: fadeIn 0.2s;
-} .apply-modify-user-popup-container h2 {
+} .create-roblox-ban-popup-container h2 {
     background-color: #222222;
     text-align: center;
     border-top-left-radius: 5px;
@@ -16,7 +16,7 @@
     padding: 5px 10px 5px 10px;
 }
 
-.apply-modify-user-popup-header {
+.create-roblox-ban-popup-header {
     color: #f0be48;
     padding-top: 8px;
     padding-bottom: 8px;
@@ -26,7 +26,7 @@
     border-bottom: 1px solid #706f6f;
 }
 
-.apply-modify-user-popup-content {
+.create-roblox-ban-popup-content {
     display: flex;
     gap: 15px;
     flex-direction: column;
@@ -34,42 +34,38 @@
     width: 100%;
     height: 100%;
     padding-top: 10px;
-    padding-bottom: 15px
+    padding-bottom: 15px;
+    padding-left: 10px;
+    box-sizing: border-box;
+    padding-right: 10px;
 }
 
-.apply-modify-table {
+.create-roblox-ban-popup-grouping {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    gap: 10px;
-    background-color: #222222;
-    padding: 8px 5px 8px 5px;
-    width: 93%;
-    border-radius: 5px;
-    text-align: center;
-    border: 1px solid #706f6f;
-} .apply-modify-table span {
-    background-color: #303030;
-    line-height: 1.75;
+    gap: 8px;
     width: 100%;
-    padding-left: 3px;
-    padding-right: 3px;
-    text-wrap: nowrap;
-    border-radius: 5px;
-    border: 1px solid #706f6f;
+} .create-roblox-ban-popup-grouping .textbox {
+    margin: 0;
+} .create-roblox-ban-popup-grouping span {
+    font-size: 18px;
+} .create-roblox-ban-popup-grouping .textarea {
+    margin: 0;
+    resize: vertical;
 }
 
-.apply-modify-buttons {
+.create-roblox-ban-buttons {
     display: flex;
     flex-direction: row;
     gap: 5px;
+    margin-top: 10px;
     width: 100%;
     justify-content: center;
     align-items: center;
 }
 
 @media screen and (max-width: 960px) {
-    .apply-modify-user-popup-container {
+    .create-roblox-ban-popup-container {
         width: 85%
     }
 }
