--- a/src/components/css/portalComponents/ManageUsers.css
+++ b/src/components/css/portalComponents/ManageUsers.css
@@ -12,14 +12,12 @@
 .manage-users-page {
     display: flex;
     margin-top: 10px;
-    margin-bottom: 10px;
     margin-left: 10px;
     margin-right: 10px;
     align-items: center;
     flex-direction: column;
     animation: fadeIn 0.2s;
     width: 100%;
-    height: calc(100vh - 100px)
 }
 
 .manage-users-container-hidden {
@@ -78,6 +76,9 @@
     flex-direction: column;
     gap: 0px;
     width: 100%;
+    max-height: 81vh;
+    overflow: auto;
+    height: fit-content;
     border-left: 1px solid #706f6f;
     border-right: 1px solid #706f6f;
     border-bottom: 1px solid #706f6f;
@@ -90,7 +91,6 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    overflow: hidden;
     gap: 5px;
     width: 100%;
     padding: 10px 15px 10px 15px;
