--- a/src/App.css
+++ b/src/App.css
@@ -58,3 +58,13 @@ h2 {
   0% { transform: translateY(-100px); opacity: 0; }
   100% { transform: 0; opacity: 1; }
 }
+
+.dev-notice-container {
+  z-index: 999;
+  padding: 15px 15px;
+  background-color: #f0be48;
+  font-size: larger;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
