--- a/src/components/css/Navbar.css
+++ b/src/components/css/Navbar.css
@@ -5,6 +5,7 @@
     align-items: center;
     padding: 10px 0;
     width: 100%;
+    z-index: 999;
     background-color: #303030;
     border-bottom: 1px solid #706f6f;
 }
