--- a/src/components/css/portalComponents/ManageUsers.css
+++ b/src/components/css/portalComponents/ManageUsers.css
@@ -75,7 +75,7 @@
     gap: 0px;
     width: 100%;
     max-height: 81vh;
-    overflow: auto;
+    overflow: hidden;
     height: fit-content;
     border-left: 1px solid #706f6f;
     border-right: 1px solid #706f6f;
@@ -90,6 +90,7 @@
     flex-direction: row;
     align-items: center;
     gap: 5px;
+    overflow: hidden;
     width: 100%;
     padding: 10px 15px 10px 15px;
     box-sizing: border-box;
