--- a/src/components/css/portalComponents/ManageUsers.css
+++ b/src/components/css/portalComponents/ManageUsers.css
@@ -74,8 +74,7 @@
     flex-direction: column;
     gap: 0px;
     width: 100%;
-    max-height: 81vh;
-    overflow: hidden;
+    margin-bottom: 10px;
     height: fit-content;
     border-left: 1px solid #706f6f;
     border-right: 1px solid #706f6f;
