404 and page restructure

--- a/src/components/css/Button.css
+++ b/src/components/css/Button.css
@@ -35,6 +35,11 @@
     color: #fff;
 }
 
+.btn-info {
+    background-color: #349fc9;
+    color: #fff;
+}
+
 .btn-cancel {
     background-color: #c93434;
     color: #fff;
