--- a/src/components/css/portalComponents/RobloxSystem/ManageBansRow.css
+++ b/src/components/css/portalComponents/RobloxSystem/ManageBansRow.css
@@ -2,6 +2,7 @@
     display: flex;
     width: 100%;
     box-sizing: border-box;
+    position: relative;
     padding: 10px 0px 10px 0px;
     flex-direction: row;
     border-bottom: 1px solid #706f6f;
@@ -59,4 +60,18 @@
     display: flex;
     flex-direction: column;
     gap: 5px;
+}
+
+.action-state-overlay {
+    background-color: rgba(0, 0, 0, 0.8);
+    z-index: 200;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
