--- a/src/components/css/Portal.css
+++ b/src/components/css/Portal.css
@@ -121,3 +121,8 @@
     padding-bottom: 10px;
     border-bottom: 1px solid #706f6f;
 }
+
+#robot-logo {
+    transform: scale(1.5);
+    color: #7234c9
+}
