--- a/src/components/css/Popup.css
+++ b/src/components/css/Popup.css
@@ -1,5 +1,5 @@
 .popup-background {
-    position: fixed;
+    position: absolute;
     display: flex;
     align-items: center;
     padding-top: 20px;
