--- a/src/components/css/Portal.css
+++ b/src/components/css/Portal.css
@@ -9,6 +9,7 @@
     margin: 0;
     display: flex;
     flex-direction: column;
+    max-height: 100%;
     gap: 5px;
     width: 300px;
     border-right: 1px solid #706f6f;
@@ -123,6 +124,11 @@
 }
 
 #robot-logo {
+    transform: scale(1.5);
+    color: #7234c9
+}
+
+#stats-logo {
     transform: scale(1.5);
     color: #7234c9
 }
