--- a/src/components/css/portalComponents/Dashboard.css
+++ b/src/components/css/portalComponents/Dashboard.css
@@ -107,6 +107,7 @@
     background-color: #303030;
     border-radius: 5px;
     width: fit-content;
+    margin-top: 8px;
     padding: 5px;
     text-wrap: wrap;
     font-size: 20px;
