--- a/src/components/css/Button.css
+++ b/src/components/css/Button.css
@@ -84,6 +84,10 @@
     background-color: #7234c9;
 }
 
+.color-bright-green:hover {
+    background-color: #34c94a;
+}
+
 .pop-out:hover {
     font-size: larger;
 }
