--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 body {
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   background-color: #3c3c3c;
+  height: fit-content;
   margin: 0;
   color: #fff;
 }
@@ -9,7 +10,12 @@ a {
   color: #42b9f5;
 }
 
+#root {
+  height: fit-content
+}
+
 .app {
+  height: fit-content;
   margin: 0;
 }
 
